--- a/jupyter/diffusion.ipynb
+++ b/jupyter/diffusion.ipynb
@@ -64,7 +64,27 @@
    "id": "e42e8349",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "# 示例张量\n",
+    "target = torch.randn(8, 3, 32, 32)         # 假设 batch_size=8\n",
+    "model_output = torch.randn(8, 3, 32, 32)\n",
+    "\n",
+    "# ------------ 手动实现 MSE 计算 ------------\n",
+    "def mean_flat(tensor):\n",
+    "    return tensor.mean(dim=tuple(range(1, tensor.ndim)))  # 按除 batch 以外维度取 mean\n",
+    "\n",
+    "loss_per_sample1 = mean_flat((target - model_output) ** 2)  # 逐样本 MSE；shape: [8]\n",
+    "loss1 = loss_per_sample1.mean()  # 再求整体 mean\n",
+    "\n",
+    "# ------------ 调用 MSE 函数 ------------\n",
+    "mse = nn.MSELoss(reduction=\"none\")\n",
+    "loss_all = mse(model_output, target)  # shape: [8, 3, 32, 32]\n",
+    "loss_per_sample2 = loss_all.mean(dim=(1, 2, 3))  # 对每个样本求 mean\n",
+    "loss2 = loss_per_sample2.mean()  # 最终整体 loss"
+   ]
   }
  ],
  "metadata": {
