--- a/public/jupyter/tools.ipynb
+++ b/public/jupyter/tools.ipynb
@@ -33,6 +33,91 @@
     "print(diffusion_config)\n",
     "print(sampling_config)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "96dc2126",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "222 -  000000\n",
+      "222 -  000050\n",
+      "222 -  000500\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "500"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def parse_resume_step_from_filename(filename):\n",
+    "    \"\"\" 解析格式为 path/to/modelNNN.pt 的文件名, NNN 是检查点的步数 \"\"\"\n",
+    "    split = filename.split(\"model\")\n",
+    "    if len(split) < 2:\n",
+    "        print(\"111 - \", split)\n",
+    "        return 0\n",
+    "    split1 = split[-1].split(\".\")[0]\n",
+    "    try:\n",
+    "        print(\"222 - \", split1)\n",
+    "        return int(split1)\n",
+    "    except ValueError:\n",
+    "        return 0\n",
+    "    \n",
+    "parse_resume_step_from_filename(\"model000000.pt\")\n",
+    "parse_resume_step_from_filename(\"model000050.pt\")\n",
+    "parse_resume_step_from_filename(\"model000500.pt\")\n",
+    "# parse_resume_step_from_filename(\"model005000.pt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "70dfc586",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "model005000.pt\n",
+      "005000\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5000"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "def parse_resume_step_from_filename(filename):\n",
+    "    match = re.search(r'model(\\d+)\\.pt$', filename)\n",
+    "    print(match.group(0))\n",
+    "    print(match.group(1))\n",
+    "    if match:\n",
+    "        return int(match.group(1))\n",
+    "    return 0\n",
+    "\n",
+    "parse_resume_step_from_filename(\"D:\\\\Dataset-Drawing\\\\guided-diffusion\\\\log\\\\0401-01\\\\model005000.pt\")"
+   ]
   }
  ],
  "metadata": {
